[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
board_qemu = []
board_sifive = []
board_k210 = []
test = []
shell = []

[dependencies]
spin = "0.7.0"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.8.0"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_off"]}
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" , rev = "4993381"}
embedded-hal = "0.2.7"
k210-pac = { git = "https://github.com/wyfcyx/k210-pac" }
k210-hal = { git = "https://github.com/wyfcyx/k210-hal" }
k210-soc = { git = "https://github.com/wyfcyx/k210-soc" }
nb = "1"
device_tree = { git = "https://github.com/rcore-os/device_tree-rs"}